# jesse

./: .codecov.yml  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .solhint.json  CI_CD_IMPLEMENTATION_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DECENTRALIZED_ARBITRAGE_SYSTEM_DESIGN.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  GITHUB_WORKFLOW_SUMMARY.md  MVP_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_ROADMAP.md  README.md  README_INSTALLATION.md  README_繁體中文.md  SECURITY_BEST_PRACTICES.md  diagnose-zen-mcp.ps1  foundry.toml  mcp-setup-guide.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  start-zen-mcp.bat
.claude/: settings.local.json
.cursor/: mcp.json  mcp.json.example
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-merge.yml  ci.yml  hft-basic-test.yml  hft-system-ci.yml  hft-test-simple.yml  integrated-validation.yml  monitoring.yml  pr-validation.yml  release.yml  security.yml  simple-test.yml
.hft-system/: last_ci_status.json
.taskmaster/: config.json
docs/: api-reference.md  architecture.md  quickstart.md  strategy-development.md  troubleshooting.md
jesse-defi-mev/: PROJECT_STATISTICS.json
my-jesse-project/: .env  docker-compose.yml  setup_database.py  test_docker_db.py  test_env.py
scripts/: check_all.sh  monitor_github_actions.py  quick-install.sh  test_hft_latency.py  validate_all_gates.py
strategies/: DeFiArbitrageStrategy.py
tests/: test_benchmark_strategy.py  test_import_strategy.py
(+16 files in other folders)
