[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jesse-trading-bot"
version = "0.1.0"
description = "Jesse quantitative trading framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jesse Dev Team" }
]
dependencies = [
    "jesse",
    "web3",
]